<resources>
    <string name="app_name">Track Me</string>
    <string name="label_distance">Distance</string>
    <string name="label_avg_speed">Avg. Speed</string>
    <string name="map_key">AIzaSyDzKA4Cpy6eld9rBJ1IVnEa6DOeaFosrKg</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="save_popup">Would you like to save ?</string>
    <string name="saving_label">Saving…</string>
    <string name="record">record</string>
</resources>